[project]
name = "bot"
version = "0.1.0"
description = "None"
authors = [
    {name = "Kirill Momotov",email = "KAMomotov@gmail.com"}
]
package-mode = false
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot (>=22.5,<23.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.11,<0.15.0)"
]
